8274944: AppCDS dump causes SEGV in VM thread while adjusting lambda proxy class info